@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.6 (gritter) 9/17/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.7 (gritter) 9/17/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.6 (gritter) 9/17/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.7 (gritter) 9/17/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -40,7 +40,7 @@ troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.27 (gritter) 9/13/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.47 (gritter) 9/13/05
-troff.d/t6.c: * Sccsid @(#)t6.c	1.83 (gritter) 9/13/05
+troff.d/t6.c: * Sccsid @(#)t6.c	1.84 (gritter) 9/17/05
 troff.d/troff.h: * Sccsid @(#)troff.h	1.13 (gritter) 9/11/05
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.7 (gritter) 8/22/05
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.1 (gritter) 8/17/05
